--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -493,93 +493,24 @@
                         <div class="column lg-12">
                           <div class="swiper-container s-testimonials__slider">
                             <div class="swiper-wrapper">
-                              <div class="s-testimonials__slide swiper-slide">
-                                <div class="s-testimonials__author">
-                                  <img
-                                    src="{% static 'images/avatars/user-02.jpg' %}"
-                                    alt="Author image"
-                                    class="s-testimonials__avatar"
-                                  />
-                                  <cite class="s-testimonials__cite">
-                                    <strong>John Rockefeller</strong>
-                                    <span>Standard Oil Co.</span>
-                                  </cite>
+                              {% for review in reviews %}
+                                <div class="s-testimonials__slide swiper-slide">
+                                    <div class="s-testimonials__author">
+                                        <img
+                                          src="{% static 'dashboard/assets/images/profile/user-3.jpg' %}"
+                                          alt="Author image"
+                                          class="s-testimonials__avatar"
+                                        />
+                                        <cite class="s-testimonials__cite">
+                                            <strong>{{ review.author_name }} {{ review.author_surname }}</strong>
+                                            <span>{{ review.brand_id }}</span>
+                                        </cite>
+                                    </div>
+                                    <p>
+                                        {{ review.content }}
+                                    </p>
                                 </div>
-                                <p>
-                                  Molestiae incidunt consequatur quis ipsa autem nam sit
-                                  enim magni. Voluptas tempore rem. Explicabo a quaerat sint
-                                  autem dolore ducimus ut consequatur neque. Nisi dolores
-                                  quaerat fuga rem nihil nostrum. Laudantium quia
-                                  consequatur molestias.
-                                </p>
-                              </div>
-                              <!-- end s-testimonials__slide -->
-
-                              <div class="s-testimonials__slide swiper-slide">
-                                <div class="s-testimonials__author">
-                                  <img
-                                    src="{% static 'images/avatars/user-03.jpg' %}"
-                                    alt="Author image"
-                                    class="s-testimonials__avatar"
-                                  />
-                                  <cite class="s-testimonials__cite">
-                                    <strong>Andrew Carnegie</strong>
-                                    <span>Carnegie Steel Co.</span>
-                                  </cite>
-                                </div>
-                                <p>
-                                  Excepturi nam cupiditate culpa doloremque deleniti
-                                  repellat. Veniam quos repellat voluptas animi adipisci.
-                                  Nisi eaque consequatur. Voluptatem dignissimos ut ducimus
-                                  accusantium perspiciatis. Quasi voluptas eius distinctio.
-                                  Atque eos maxime.
-                                </p>
-                              </div>
-                              <!-- end s-testimonials__slide -->
-
-                              <div class="s-testimonials__slide swiper-slide">
-                                <div class="s-testimonials__author">
-                                  <img
-                                    src="{% static 'images/avatars/user-01.jpg' %}"
-                                    alt="Author image"
-                                    class="s-testimonials__avatar"
-                                  />
-                                  <cite class="s-testimonials__cite">
-                                    <strong>John Morgan</strong>
-                                    <span>JP Morgan & Co.</span>
-                                  </cite>
-                                </div>
-                                <p>
-                                  Repellat dignissimos libero. Qui sed at corrupti expedita
-                                  voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed
-                                  ipsam. Autem eaque officia cum exercitationem sunt
-                                  voluptatum accusamus. Quasi voluptas eius distinctio.
-                                  Voluptatem dignissimos ut.
-                                </p>
-                              </div>
-                              <!-- end s-testimonials__slide -->
-
-                              <div class="s-testimonials__slide swiper-slide">
-                                <div class="s-testimonials__author">
-                                  <img
-                                    src="{% static 'images/avatars/user-06.jpg' %}"
-                                    alt="Author image"
-                                    class="s-testimonials__avatar"
-                                  />
-                                  <cite class="s-testimonials__cite">
-                                    <strong>Henry Ford</strong>
-                                    <span>Ford Motor Co.</span>
-                                  </cite>
-                                </div>
-                                <p>
-                                  Nunc interdum lacus sit amet orci. Vestibulum dapibus nunc
-                                  ac augue. Fusce vel dui. In ac felis quis tortor malesuada
-                                  pretium. Curabitur vestibulum aliquam leo. Qui sed at
-                                  corrupti expedita voluptas odit. Nihil ea quia nesciunt.
-                                  Ducimus aut sed ipsam.
-                                </p>
-                              </div>
-                              <!-- end s-testimonials__slide -->
+                              {% endfor %}
                             </div>
                             <!-- end swiper-wrapper -->
 
