--- a/dashboard/templates/SEODash-main/src/html/work-page.html
+++ b/dashboard/templates/SEODash-main/src/html/work-page.html
@@ -151,6 +151,21 @@
                   <span class="hide-menu">Works Page</span>
                 </a>
               </li>
+               <li class="sidebar-item">
+                <a
+                  class="sidebar-link"
+                  href="{% url 'review-page' %}"
+                  aria-expanded="false"
+                >
+                  <span>
+                    <iconify-icon
+                      icon="solar:planet-3-bold-duotone"
+                      class="fs-6"
+                    ></iconify-icon>
+                  </span>
+                  <span class="hide-menu">Reviews Page</span>
+                </a>
+              </li>
             </ul>
             <div
               class="unlimited-access hide-menu bg-primary-subtle position-relative mb-7 mt-7 rounded-3"
