--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -561,11 +561,12 @@
           <div class="column list-block__item">
             <div class="subscribe-form s-footer__subscribe">
               <h6>Subscribe</h6>
-              <form id="mc-form" class="mc-form">
+              <form id="email_form" class="mc-form" method="post" action="{% url 'subscribe' %}">
+                {% csrf_token %}
                 <input
                   type="email"
-                  name="EMAIL"
-                  id="mce-EMAIL"
+                  name="email"
+                  id="email"
                   class="u-fullwidth text-center"
                   placeholder="Your Email Address"
                   title="The domain portion of the email address is invalid (the portion after the @)."
