--- a/dashboard/templates/SEODash-main/src/html/send-newsletter-page.html
+++ b/dashboard/templates/SEODash-main/src/html/send-newsletter-page.html
@@ -151,7 +151,7 @@
                   <span class="hide-menu">Works Page</span>
                 </a>
               </li>
-              <li class="sidebar-item">
+               <li class="sidebar-item">
                 <a
                   class="sidebar-link"
                   href="{% url 'review-page' %}"
@@ -270,153 +270,41 @@
         {% endif %}
 
         <div class="container-fluid">
-          <!-- Brand List Section -->
+          <!-- Review List Section -->
           <div class="card mb-4">
             <div class="card-body">
-              <h5 class="card-title fw-semibold">Brands</h5>
-              <p class="text-muted mb-4">Manage your brands here.</p>
+              <h5 class="card-title fw-semibold">Newsletter</h5>
+              <p class="text-muted mb-4">Send your newsletter messages here.</p>
 
-              {% if brands %}
+              {% if subscribers %}
               <div class="table-responsive">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Order</th>
-                      <th>Brand Name</th>
-                      <th>Logo SVG</th>
-                      <th>Last Edited By</th>
-                      <th>Last Edited Date</th>
-                      <th>Section</th>
-                      <th>Status</th>
-                      <th>Actions</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    {% for brand in brands %}
-                    <tr>
-                      <td>{{ brand.order_number }}</td>
-                      <td>{{ brand.name }}</td>
-                      <td>
-                        <div style="max-width: 200px; overflow: hidden">
-                          {{ brand.logo|truncatechars:50 }}
-                        </div>
-                      </td>
-                      <td>{{ brand.last_edited_by.username }}</td>
-                      <td>{{ brand.last_edited_date|date:"Y-m-d H:i" }}</td>
-                      <td>{{ brand.section }}</td>
-                      <td>
-                        <form method="post" action="{% url 'update_brand' brand.id %}">
-                          {% csrf_token %}
-                          <input type="hidden" name="name" value="{{ brand.name }}" />
-                          <input type="hidden" name="order_number" value="{{ brand.order_number }}" />
-                          <input type="hidden" name="logo" value="{{ brand.logo }}" />
-                          <input type="hidden" name="section" value="{{ brand.section.id }}">
-                          <input type="checkbox" name="is_active" {% if brand.is_active %}checked{% endif %} style="display: none" />
-                          <button type="button" class="btn btn-sm {% if brand.is_active %}btn-success{% else %}btn-secondary{% endif %}" onclick="this.previousElementSibling.checked = !this.previousElementSibling.checked; this.form.submit()">
-                            {% if brand.is_active %}Active{% else %}Inactive{% endif %}
-                          </button>
-                        </form>
-                      </td>
-                      <td>
-                        <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editModal{{ brand.id }}">
-                          Edit
-                        </button>
-                        <form method="post" action="{% url 'delete_brand' brand.id %}" class="d-inline">
-                          {% csrf_token %}
-                          <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                        </form>
-                      </td>
-                    </tr>
 
-                    <!-- Edit Modal -->
-                    <div class="modal fade" id="editModal{{ brand.id }}" tabindex="-1">
-                      <div class="modal-dialog">
-                        <div class="modal-content">
-                          <div class="modal-header">
-                            <h5 class="modal-title">Edit Brand</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                          </div>
-                          <form method="post" action="{% url 'update_brand' brand.id %}">
-                            {% csrf_token %}
-                            <div class="modal-body">
-                              <div class="form-group mb-3">
-                                <label for="order_number{{ brand.id }}">Order Number</label>
-                                <input type="number" class="form-control" id="order_number{{ brand.id }}" name="order_number" value="{{ brand.order_number }}" required min="1" />
-                              </div>
-                              <div class="form-group mb-3">
-                                <label for="name{{ brand.id }}">Brand Name</label>
-                                <input type="text" class="form-control" id="name{{ brand.id }}" name="name" value="{{ brand.name }}" required />
-                              </div>
-                              <div class="form-group mb-3">
-                                <label for="logo{{ brand.id }}">Logo SVG</label>
-                                <input type="text" class="form-control" id="logo{{ brand.id }}" name="logo" value="{{ brand.logo}}" required />
-                              </div>
-                              <div class="form-group mb-3">
-                                <label for="section{{ brand.id }}">Section</label>
-                                <select class="form-control" id="section{{ brand.id }}" name="section" required>
-                                  <option value="">-- Select a Section --</option>
-                                  {% for section in sections %}
-                                    <option value="{{ section.id }}" {% if brand.section.id == section.id %}selected{% endif %}>
-                                      {{ section.name }}
-                                    </option>
-                                  {% endfor %}
-                                </select>
-                              </div>
-                              <div class="mb-3 form-check">
-                              <input type="checkbox" class="form-check-input" id="is_active_edit" {% if brand.is_active %}checked{% endif %} name="is_active" />
-                              <label class="form-check-label" for="is_active">Is Active</label>
-                            </div>
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                              <button type="submit" class="btn btn-primary">Save changes</button>
-                            </div>
-                          </form>
-                        </div>
-                      </div>
-                    </div>
-                    {% endfor %}
-                  </tbody>
-                </table>
               </div>
               {% else %}
-              <p class="text-muted">No brands available.</p>
+              <p class="text-muted">No subscribers available.</p>
               {% endif %}
             </div>
           </div>
 
-          <!-- Add New Brand Form -->
+          <!-- Add New Subscriber Form -->
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title fw-semibold">Add New Brand</h5>
-              <form method="post" action="{% url 'create_brand' %}">
+              <h5 class="card-title fw-semibold">Send New Newsletter</h5>
+              <form method="post" action="{% url 'send_newsletter' %}">
                 {% csrf_token %}
                 <div class="mb-3">
-                  <label for="order_number" class="form-label">Order Number</label>
-                  <input type="number" class="form-control" id="order_number" name="order_number" required min="1" />
+                  <label for="title" class="form-label">Title</label>
+                  <input type="text" class="form-control" id="title" name="title" required />
                 </div>
                 <div class="mb-3">
-                  <label for="name" class="form-label">Brand Name</label>
-                  <input type="text" class="form-control" id="name" name="name" required />
+                  <label for="content" class="form-label">Content</label>
+                  <textarea class="form-control" id="content" name="content" rows="5" required></textarea>
                 </div>
                 <div class="mb-3">
-                  <label for="logo" class="form-label">Icon SVG</label>
-                  <input class="form-control" id="logo" name="logo" required />
+                  <label for="footer" class="form-label">Footer</label>
+                  <textarea class="form-control" id="footer" name="footer" rows="2">Pozdrawiamy, studenci Politechniki Poznańskiej</textarea>
                 </div>
-                <div class="mb-3">
-                  <label for="section" class="form-label">Section</label>
-                  <select class="form-control" id="section" name="section" required>
-                    <option value="">-- Select a Section --</option>
-                    {% for section in sections %}
-                      <option value="{{ section.id }}">{{ section.name }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
-                <div class="mb-3 form-check">
-                  <input type="checkbox" class="form-check-input" id="is_active" name="is_active" />
-                  <label class="form-check-label" for="is_active">Is Active</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Add Brand</button>
+                <button type="submit" class="btn btn-primary">Send Newsletter</button>
               </form>
             </div>
           </div>
